--- a/package.json
+++ b/package.json
@@ -3,389 +3,10 @@
   "version": "0.1.0",
   "description": "Boilerplate for writing and testing HTTP Cloud Functions with Typescript",
   "main": "dist/index.js",
-  "dependencies": {
-    "accepts": "^1.3.7",
-    "abab": "^2.0.5",
-    "acorn": "^8.5.0",
-    "acorn-walk": "^7.2.0",
-    "acorn-globals": "^6.0.0",
-    "ansi-escapes": "^4.3.2",
-    "ansi-styles": "^3.2.1",
-    "ansi-regex": "^5.0.1",
-    "array-flatten": "^1.1.1",
-    "agent-base": "^6.0.2",
-    "anymatch": "^3.1.2",
-    "asynckit": "^0.4.0",
-    "argparse": "^1.0.10",
-    "babel-jest": "^27.3.1",
-    "ansi-align": "^3.0.1",
-    "babel-plugin-istanbul": "^6.1.1",
-    "babel-preset-jest": "^27.2.0",
-    "babel-plugin-jest-hoist": "^27.2.0",
-    "babel-preset-current-node-syntax": "^1.0.1",
-    "abbrev": "^1.1.1",
-    "boxen": "^5.1.2",
-    "body-parser": "^1.19.0",
-    "bs-logger": "^0.2.6",
-    "balanced-match": "^1.0.2",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.2",
-    "browser-process-hrtime": "^1.0.0",
-    "browserslist": "^4.17.6",
-    "buffer-from": "^1.1.2",
-    "call-bind": "^1.0.2",
-    "binary-extensions": "^2.2.0",
-    "bytes": "^3.1.0",
-    "camelcase": "^6.2.0",
-    "char-regex": "^1.0.2",
-    "callsites": "^3.1.0",
-    "bser": "^2.1.1",
-    "cacheable-request": "^6.1.0",
-    "caniuse-lite": "^1.0.30001276",
-    "chokidar": "^3.5.2",
-    "chalk": "^2.4.2",
-    "cliui": "^7.0.4",
-    "ci-info": "^2.0.0",
-    "color-name": "^1.1.3",
-    "co": "^4.6.0",
-    "color-convert": "^1.9.3",
-    "combined-stream": "^1.0.8",
-    "cjs-module-lexer": "^1.2.2",
-    "cli-boxes": "^2.2.1",
-    "collect-v8-coverage": "^1.0.1",
-    "content-disposition": "^0.5.3",
-    "content-type": "^1.0.4",
-    "component-emitter": "^1.3.0",
-    "cookie": "^0.4.0",
-    "convert-source-map": "^1.8.0",
-    "cookie-signature": "^1.0.6",
-    "cross-spawn": "^7.0.3",
-    "clone-response": "^1.0.2",
-    "cookiejar": "^2.1.3",
-    "crypto-random-string": "^2.0.0",
-    "configstore": "^5.0.1",
-    "cssom": "^0.4.4",
-    "debug": "^2.6.9",
-    "concat-map": "^0.0.1",
-    "data-urls": "^2.0.0",
-    "decompress-response": "^3.3.0",
-    "dedent": "^0.7.0",
-    "decimal.js": "^10.3.1",
-    "deep-extend": "^0.6.0",
-    "cssstyle": "^2.3.0",
-    "depd": "^1.1.2",
-    "delayed-stream": "^1.0.0",
-    "deepmerge": "^4.2.2",
-    "destroy": "^1.0.4",
-    "diff-sequences": "^27.0.6",
-    "deep-is": "^0.1.4",
-    "detect-newline": "^3.1.0",
-    "domexception": "^2.0.1",
-    "ee-first": "^1.1.1",
-    "emittery": "^0.8.1",
-    "defer-to-connect": "^1.1.3",
-    "emoji-regex": "^8.0.0",
-    "duplexer3": "^0.1.4",
-    "encodeurl": "^1.0.2",
-    "end-of-stream": "^1.4.4",
-    "escalade": "^3.1.1",
-    "electron-to-chromium": "^1.3.888",
-    "escape-html": "^1.0.3",
-    "escape-string-regexp": "^1.0.5",
-    "escodegen": "^2.0.0",
-    "dot-prop": "^5.3.0",
-    "esprima": "^4.0.1",
-    "etag": "^1.8.1",
-    "execa": "^5.1.1",
-    "error-ex": "^1.3.2",
-    "express": "^4.17.1",
-    "fast-json-stable-stringify": "^2.1.0",
-    "esutils": "^2.0.3",
-    "expect": "^27.3.1",
-    "fast-safe-stringify": "^2.1.1",
-    "exit": "^0.1.2",
-    "escape-goat": "^2.1.1",
-    "fill-range": "^7.0.1",
-    "fb-watchman": "^2.0.1",
-    "find-up": "^4.1.0",
-    "form-data": "^3.0.1",
-    "finalhandler": "^1.1.2",
-    "estraverse": "^5.3.0",
-    "fast-levenshtein": "^2.0.6",
-    "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
-    "fsevents": "^2.3.2",
-    "function-bind": "^1.1.1",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.1.1",
-    "get-stream": "^4.1.0",
-    "glob": "^7.2.0",
-    "get-package-type": "^0.1.0",
-    "fs.realpath": "^1.0.0",
-    "globals": "^11.12.0",
-    "formidable": "^1.2.6",
-    "graceful-fs": "^4.2.8",
-    "has-flag": "^3.0.0",
-    "has": "^1.0.3",
-    "global-dirs": "^3.0.0",
-    "has-yarn": "^2.1.0",
-    "got": "^9.6.0",
-    "glob-parent": "^5.1.2",
-    "has-symbols": "^1.0.2",
-    "http-errors": "^1.7.2",
-    "html-encoding-sniffer": "^2.0.1",
-    "hosted-git-info": "^2.8.9",
-    "human-signals": "^2.1.0",
-    "http-proxy-agent": "^4.0.1",
-    "html-escaper": "^2.0.2",
-    "iconv-lite": "^0.4.24",
-    "https-proxy-agent": "^5.0.0",
-    "import-lazy": "^2.1.0",
-    "imurmurhash": "^0.1.4",
-    "inflight": "^1.0.6",
-    "import-local": "^3.0.3",
-    "http-cache-semantics": "^4.1.0",
-    "ipaddr.js": "^1.9.1",
-    "inherits": "^2.0.3",
-    "ignore-by-default": "^1.0.1",
-    "is-binary-path": "^2.1.0",
-    "ini": "^2.0.0",
-    "is-ci": "^2.0.0",
-    "is-arrayish": "^0.2.1",
-    "is-core-module": "^2.8.0",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-generator-fn": "^2.1.0",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "is-extglob": "^2.1.1",
-    "is-obj": "^2.0.0",
-    "is-potential-custom-element-name": "^1.0.1",
-    "is-stream": "^2.0.1",
-    "is-npm": "^5.0.0",
-    "is-typedarray": "^1.0.0",
-    "is-installed-globally": "^0.4.0",
-    "isexe": "^2.0.0",
-    "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-lib-source-maps": "^4.0.1",
-    "is-path-inside": "^3.0.3",
-    "is-yarn-global": "^0.3.0",
-    "jest-circus": "^27.3.1",
-    "jest": "^27.3.1",
-    "jest-cli": "^27.3.1",
-    "jest-config": "^27.3.1",
-    "jest-diff": "^27.3.1",
-    "jest-each": "^27.3.1",
-    "istanbul-lib-instrument": "^4.0.3",
-    "jest-environment-node": "^27.3.1",
-    "jest-docblock": "^27.0.6",
-    "jest-get-type": "^27.3.1",
-    "jest-haste-map": "^27.3.1",
-    "istanbul-reports": "^3.0.5",
-    "jest-changed-files": "^27.3.0",
-    "jest-message-util": "^27.3.1",
-    "jest-mock": "^27.3.0",
-    "jest-regex-util": "^27.0.6",
-    "jest-matcher-utils": "^27.3.1",
-    "jest-resolve": "^27.3.1",
-    "jest-environment-jsdom": "^27.3.1",
-    "jest-runtime": "^27.3.1",
-    "jest-runner": "^27.3.1",
-    "jest-serializer": "^27.0.6",
-    "jest-snapshot": "^27.3.1",
-    "jest-util": "^27.3.1",
-    "jest-watcher": "^27.3.1",
-    "jest-validate": "^27.3.1",
-    "jest-worker": "^27.3.1",
-    "jest-jasmine2": "^27.3.1",
-    "js-tokens": "^4.0.0",
-    "jest-leak-detector": "^27.3.1",
-    "jest-resolve-dependencies": "^27.3.1",
-    "js-yaml": "^3.14.1",
-    "jest-pnp-resolver": "^1.2.2",
-    "json5": "^2.2.0",
-    "json-buffer": "^3.0.0",
-    "keyv": "^3.1.0",
-    "jsdom": "^16.7.0",
-    "json-parse-even-better-errors": "^2.3.1",
-    "jsesc": "^2.5.2",
-    "kleur": "^3.0.3",
-    "latest-version": "^5.1.0",
-    "lodash.memoize": "^4.1.2",
-    "leven": "^3.1.0",
-    "locate-path": "^5.0.0",
-    "levn": "^0.3.0",
-    "lines-and-columns": "^1.1.6",
-    "make-error": "^1.3.6",
-    "lru-cache": "^6.0.0",
-    "media-typer": "^0.3.0",
-    "merge-stream": "^2.0.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "makeerror": "^1.0.12",
-    "mime": "^1.6.0",
-    "micromatch": "^4.0.4",
-    "mime-db": "^1.50.0",
-    "lodash": "^4.17.21",
-    "mimic-fn": "^2.1.0",
-    "lowercase-keys": "^1.0.1",
-    "mime-types": "^2.1.33",
-    "ms": "^2.0.0",
-    "make-dir": "^3.1.0",
-    "natural-compare": "^1.4.0",
-    "negotiator": "^0.6.2",
-    "mimic-response": "^1.0.1",
-    "node-modules-regexp": "^1.0.0",
-    "minimatch": "^3.0.4",
-    "node-int64": "^0.4.0",
-    "nopt": "^1.0.10",
-    "normalize-path": "^3.0.0",
-    "minimist": "^1.2.5",
-    "node-releases": "^2.0.1",
-    "normalize-package-data": "^2.5.0",
-    "npm-run-path": "^4.0.1",
-    "on-finished": "^2.3.0",
-    "object-inspect": "^1.11.0",
-    "normalize-url": "^4.5.1",
-    "onetime": "^5.1.2",
-    "nwsapi": "^2.2.0",
-    "p-limit": "^2.3.0",
-    "nodemon": "^2.0.14",
-    "p-try": "^2.2.0",
-    "p-locate": "^4.1.0",
-    "p-cancelable": "^1.1.0",
-    "once": "^1.4.0",
-    "package-json": "^6.5.0",
-    "optionator": "^0.8.3",
-    "parseurl": "^1.3.3",
-    "path-exists": "^4.0.0",
-    "path-key": "^3.1.1",
-    "parse5": "^6.0.1",
-    "path-is-absolute": "^1.0.1",
-    "path-to-regexp": "^0.1.7",
-    "picomatch": "^2.3.0",
-    "pirates": "^4.0.1",
-    "pkg-dir": "^4.2.0",
-    "path-parse": "^1.0.7",
-    "picocolors": "^1.0.0",
-    "parse-json": "^5.2.0",
-    "pretty-format": "^27.3.1",
-    "proxy-addr": "^2.0.7",
-    "prepend-http": "^2.0.0",
-    "prelude-ls": "^1.1.2",
-    "prompts": "^2.4.2",
-    "pstree.remy": "^1.1.8",
-    "psl": "^1.8.0",
-    "raw-body": "^2.4.0",
-    "qs": "^6.7.0",
-    "range-parser": "^1.2.1",
-    "pupa": "^2.1.1",
-    "react-is": "^17.0.2",
-    "pump": "^3.0.0",
-    "rc": "^1.2.8",
-    "punycode": "^2.1.1",
-    "readable-stream": "^3.6.0",
-    "readdirp": "^3.6.0",
-    "resolve-from": "^5.0.0",
-    "registry-url": "^5.1.0",
-    "require-directory": "^2.1.1",
-    "resolve-cwd": "^3.0.0",
-    "resolve": "^1.20.0",
-    "resolve.exports": "^1.1.0",
-    "read-pkg": "^5.2.0",
-    "safe-buffer": "^5.1.2",
-    "read-pkg-up": "^7.0.1",
-    "responselike": "^1.0.2",
-    "safer-buffer": "^2.1.2",
-    "send": "^0.17.1",
-    "rimraf": "^3.0.2",
-    "semver": "^7.3.5",
-    "semver-diff": "^3.1.1",
-    "setprototypeof": "^1.1.1",
-    "serve-static": "^1.14.1",
-    "shebang-command": "^2.0.0",
-    "saxes": "^5.0.1",
-    "side-channel": "^1.0.4",
-    "shebang-regex": "^3.0.0",
-    "signal-exit": "^3.0.5",
-    "source-map-support": "^0.5.20",
-    "source-map": "^0.6.1",
-    "slash": "^3.0.0",
-    "registry-auth-token": "^4.2.1",
-    "sisteransi": "^1.0.5",
-    "spdx-license-ids": "^3.0.10",
-    "stack-utils": "^2.0.5",
-    "spdx-exceptions": "^2.3.0",
-    "string-width": "^4.2.3",
-    "statuses": "^1.5.0",
-    "string-length": "^4.0.2",
-    "spdx-expression-parse": "^3.0.1",
-    "strip-bom": "^4.0.0",
-    "strip-ansi": "^6.0.1",
-    "superagent": "^6.1.0",
-    "strip-final-newline": "^2.0.0",
-    "supertest": "^6.1.6",
-    "supports-color": "^5.5.0",
-    "supports-hyperlinks": "^2.2.0",
-    "terminal-link": "^2.1.1",
-    "spdx-correct": "^3.1.1",
-    "string_decoder": "^1.3.0",
-    "sprintf-js": "^1.0.3",
-    "throat": "^6.0.1",
-    "tmpl": "^1.0.5",
-    "symbol-tree": "^3.2.4",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.0",
-    "to-fast-properties": "^2.0.0",
-    "strip-json-comments": "^2.0.1",
-    "to-readable-stream": "^1.0.0",
-    "tough-cookie": "^4.0.0",
-    "type-detect": "^4.0.8",
-    "ts-jest": "^27.0.7",
-    "touch": "^3.1.0",
-    "typescript": "^4.4.4",
-    "test-exclude": "^6.0.0",
-    "typedarray-to-buffer": "^3.1.5",
-    "type-is": "^1.6.18",
-    "tr46": "^2.1.0",
-    "type-check": "^0.3.2",
-    "unique-string": "^2.0.0",
-    "unpipe": "^1.0.0",
-    "universalify": "^0.1.2",
-    "url-parse-lax": "^3.0.0",
-    "utils-merge": "^1.0.1",
-    "undefsafe": "^2.0.5",
-    "type-fest": "^0.8.1",
-    "update-notifier": "^5.1.0",
-    "vary": "^1.1.2",
-    "validate-npm-package-license": "^3.0.4",
-    "util-deprecate": "^1.0.2",
-    "v8-to-istanbul": "^8.1.0",
-    "w3c-hr-time": "^1.0.2",
-    "webidl-conversions": "^6.1.0",
-    "walker": "^1.0.8",
-    "which": "^2.0.2",
-    "whatwg-mimetype": "^2.3.0",
-    "w3c-xmlserializer": "^2.0.0",
-    "widest-line": "^3.1.0",
-    "whatwg-encoding": "^1.0.5",
-    "wrap-ansi": "^7.0.0",
-    "word-wrap": "^1.2.3",
-    "write-file-atomic": "^3.0.3",
-    "wrappy": "^1.0.2",
-    "whatwg-url": "^8.7.0",
-    "xdg-basedir": "^4.0.0",
-    "yallist": "^4.0.0",
-    "yargs-parser": "^20.2.9",
-    "y18n": "^5.0.8",
-    "yargs": "^16.2.0",
-    "xmlchars": "^2.2.0",
-    "ws": "^7.5.5",
-    "xml-name-validator": "^3.0.0"
-  },
-  "devDependencies": {},
   "scripts": {
+    "build": "tsc",
+    "start": "npm run build && (cd dist && npx functions-framework --target=helloFunction --signature-type=http)",
+    "dev": "nodemon --watch './**' -e ts --exec 'npm start'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -404,5 +25,13 @@
   "bugs": {
     "url": "https://github.com/hubvisory-source/typescript-http-cf-boilerplate/issues"
   },
-  "homepage": "https://github.com/hubvisory-source/typescript-http-cf-boilerplate#readme"
+  "homepage": "https://github.com/hubvisory-source/typescript-http-cf-boilerplate#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.14",
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@google-cloud/functions-framework": "^1.9.0"
+  }
 }
