--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "npm run build && (cd dist && npx functions-framework --target=helloFunction --signature-type=http)",
     "dev": "nodemon --watch './**' -e ts --exec 'npm start'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,16 @@
   "homepage": "https://github.com/hubvisory-source/typescript-http-cf-boilerplate#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.14",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^1.9.0"
+    "@google-cloud/functions-framework": "^1.9.0",
+    "express": "^4.17.1"
   }
 }
